--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,12 @@
     "/tests/"
   ],
   "dependencies": {
-    "polymer": "~0.5.2",
-    "core-ajax": "Polymer/core-ajax#~0.5.2",
+    "polymer": "Polymer/polymer#^1.1.0",
+    "core-ajax": "PolymerElements/iron-ajax#^1.0.0",
     "d3": "^3.3.13",
     "d3-cloud": "~1.0.5"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^2.0.5"
+    "web-component-tester": "*"
   }
 }
